--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,10 @@
     <title>miało działać</title>
 </head>
 <body>
-    <button><>
+    <button>kliknij</button>
 
 
 
-    //autor Paweł Kuczmik czyli paweltheriperr i krzychu Wandzel  czyli ja
+    <!--autor Paweł Kuczmik czyli paweltheriperr i krzychu Wandzel  czyli ja **/--> 
 </body>
 </html>
