--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>miało działać</title>
-    <script type="text/javascript" src="script.js">
+    
         
-    </script>
+    
 </head>
 
 
@@ -15,9 +15,11 @@
 
     
 
-    
-    <button>kliknij</button>
-
+</hr>
+        <input type="text" name="name" placeholder=" imie ">
+        <button onclick="wysylkaJSON()">kliknij to wysle json</button>
+   
+<script type="text/javascript" src="script.js"></script>
     <!--autor Paweł Kuczmik czyli paweltheriperr i krzychu Wandzel  czyli ja **/--> 
 </body>
 </html>
