--- a/templates/index.html
+++ b/templates/index.html
@@ -5,12 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>miało działać</title>
+
+
+
 </head>
+
+
 <body>
-    <button>kliknij</button>
 
 
 
+</hr>
+<form action="/success" enctype="multipart/form-data" method="POST">
+   <input type="text" name="name">
+   <input type="submit" value="Click me">
+</form>
+<!--        <input type="text" name="name" placeholder=" imie ">-->
+<!--        <button onclick="wysylkaJSON()">kliknij to wysle json</button>-->
+
+<script type="text/javascript" src="script.js"></script>
     <!--autor Paweł Kuczmik czyli paweltheriperr i krzychu Wandzel  czyli ja **/--> 
 </body>
 </html>
