--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,8 @@
 <body>
 <hr>
 <form action="/success" enctype="multipart/form-data" method="POST">
-   <input type="text" name="name">
+   <input type="text" name="name"> <br>
+   <input type="text" name="surname"> <br>
    <input type="submit" value="Click me">
 </form>
 <!--        <input type="text" name="name" placeholder=" imie ">-->
