JS comunikat konsoli

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,9 @@
 
         <input type="text" name="name" placeholder=" imie ">
         <button onclick="wysylkaJSON()">kliknij to wysle json</button>
+        
    
-<script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="script.js">console.log("This is JavaScript");</script>
     <!--autor Paweł Kuczmik czyli paweltheriperr i krzychu Wandzel  czyli ja **/--> 
 </body>
 </html>
