--- a/templates/index.html
+++ b/templates/index.html
@@ -17,34 +17,33 @@
 <!--        <input type="text" name="name" placeholder=" imie ">-->
 <!--        <button onclick="wysylkaJSON()">kliknij to wysle json</button>-->
 
-<input type="text" id="surname" name="name" placeholder=" imie "> <br>
-<input type="text"id="name" name="surname" placeholder="nazwisko "> <br>
+<input type="text" id="name" name="name" placeholder=" imie "> <br>
+<input type="text"id="surname" name="surname" placeholder="nazwisko "> <br>
 <button onclick="mnich()">kliknij to wysle json</button>
         
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script>
-           var url = "192.168.0.134:8080";
-
-var xhr = new XMLHttpRequest();
-xhr.open("POST", url);
-
-xhr.setRequestHeader("Accept", "application/json");
-xhr.setRequestHeader("Content-Type", "application/json");
-
-xhr.onreadystatechange = function () {
-   if (xhr.readyState === 4) {
-      console.log(xhr.status);
-      console.log(xhr.responseText);
-   }};
-
-var data = `{
-  "Id": 78912,
-  "Customer": "Jason Sweet",
-  "Quantity": 1,
-  "Price": 18.00
-}`;
-
-xhr.send(data);
+            
+            function mnich() {
+                console.log("mnich")
+               const name =  document.getElementById("name");
+               const surname =   document.getElementById("surname");
+    var request = { name:"John", surname: "surname"};
+    $.ajax({
+        type:"post",
+        cache:false,
+        url:"http://192.168.0.134:8080/",
+        data: JSON.stringify(request),
+        dataType:"json",
+        contentType:"application/json; charset=utf-8",
+        success:function (result) {
+            alert(result);
+        },
+        error:function (result) {
+            alert("No Connection to server");
+        },
+    });
+}
            //AJax senior comment scripter jtr 
         </script>
    
