--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
                 console.log("mnich")
                const name =  document.getElementById("name");
                const surname =   document.getElementById("surname");
-    var request = { name:"John", surname: "surname"};
+    var request = { name:"name", surname: "surname"};
     $.ajax({
         type:"post",
         cache:false,
