--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
     $.ajax({
         type:"post",
         cache:false,
-        url:"http://192.168.0.134:8080/",
+        url:"http://192.168.0.134:8080/ajax",
         data: JSON.stringify(request),
         dataType:"json",
         contentType:"application/json; charset=utf-8",
