--- a/templates/index.html
+++ b/templates/index.html
@@ -26,9 +26,9 @@
             
             function mnich() {
                 console.log("mnich")
-               const name =  document.getElementById("name");
-               const surname =   document.getElementById("surname");
-    var request = { name:"name", surname: "surname"};
+               const name =  document.getElementById("name").value;
+               const surname =   document.getElementById("surname").value;
+    var request = { "name": name, "surname": surname};
     $.ajax({
         type:"post",
         cache:false,
