--- a/templates/index.html
+++ b/templates/index.html
@@ -18,34 +18,34 @@
 <!--        <button onclick="wysylkaJSON()">kliknij to wysle json</button>-->
 
 <input type="text" id="name" name="name" placeholder=" imie "> <br>
-<input type="text"id="surname" name="surname" placeholder="nazwisko "> <br>
+<input type="text" id="surname" name="surname" placeholder="nazwisko "> <br>
 <button onclick="mnich()">kliknij to wysle json</button>
         
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script>
+<script>
             
-            function mnich() {
-                console.log("mnich")
-               const name =  document.getElementById("name").value;
-               const surname =   document.getElementById("surname").value;
-    var request = { "name": name, "surname": surname};
-    $.ajax({
-        type:"post",
-        cache:false,
-        url:"http://192.168.0.134:8080/ajax",
-        data: JSON.stringify(request),
-        dataType:"json",
-        contentType:"application/json; charset=utf-8",
-        success:function (result) {
-            alert(result);
-        },
-        error:function (result) {
-            alert("No Connection to server");
-        },
-    });
-}
+    function mnich() {
+        const name =  document.getElementById("name").value;
+        const surname =   document.getElementById("surname").value;
+
+        var request = { "name": name, "surname": surname};
+
+        $.ajax({
+            type:"POST",
+            url:"/ajax",
+            data: JSON.stringify(request),
+            dataType:"json",
+            contentType:"application/json; charset=utf-8",
+            success:function (result) {
+                alert(result);
+            },
+            error:function (result) {
+                alert("No Connection to server");
+            },
+        });
+    }
            //AJax senior comment scripter jtr 
-        </script>
+</script>
    
     <!--autor Paweł Kuczmik czyli paweltheriperr i krzychu Wandzel  czyli ja **/--> 
 </body>
