create small tests, change logging conf

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,13 +9,12 @@
 
 <body>
 <hr>
-<!-- <form action="/success" enctype="multipart/form-data" method="POST">
+<form action="/success" enctype="multipart/form-data" method="POST">
    <input type="text" name="name" placeholder=" imie "> <br>
    <input type="text" name="surname" placeholder="nazwisko "> <br>
    <input type="submit" value="Click me">
-</form> -->
-<!--        <input type="text" name="name" placeholder=" imie ">-->
-<!--        <button onclick="wysylkaJSON()">kliknij to wysle json</button>-->
+</form>
+<br><br><br>
 
 <input type="text" id="name" name="name" placeholder=" imie "> <br>
 <input type="text" id="surname" name="surname" placeholder="nazwisko "> <br>
